tests/agl/rejections/type/for_range_non_int_start.agl
for i in "hello" to 5 do
  ()
done
